# project-1_Kizelbashev_M25-555

./: pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
