[project]
name = "project-1-kizelbashev-m25-555"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "javendorg",email = "javendorg777@yandex.ru"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]


[tool.poetry.scripts]
project = "labyrinth_game.main:main"


[dependency-groups]
dev = [
    "ruff (>=0.13.2,<0.14.0)"
]


[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
